--- a/android/build.gradle
+++ b/android/build.gradle
@@ -34,5 +34,5 @@ android {
 }
 
 dependencies {
-    implementation 'com.amap.api:location:latest.integration'
+    implementation 'com.amap.api:location:5.5.1'
 }
